# autd3-emulator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  build.py  cov.py
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  coverage.yml  pr.yml  release.yml
examples/: custom_device.rs  modulation.rs  output_ultrasound.rs  plot_field.py  plot_rms.py  rms.rs  sound_field.rs
src/: error.rs  lib.rs  props.rs
src/option/: mod.rs  range.rs
src/option/range/: mod.rs  range_0d.rs  range_1d.rs  range_2d.rs  range_3d.rs  range_iter.rs
src/record/: mod.rs  output_ultrasound.rs  output_voltage.rs  sound_field.rs
src/record/rms/: cpu.rs  gpu.rs  mod.rs  shader.wgsl
src/record/sound_field/: cpu.rs  gpu.rs  mod.rs  shader.wgsl
src/record/sound_field/instant/: cpu.rs  gpu.rs  mod.rs  option.rs  shader.wgsl
src/record/sound_field/rms/: cpu.rs  gpu.rs  mod.rs  option.rs  shader.wgsl
src/record/transducer/: mod.rs  output_ultrasound.rs  output_voltage.rs
src/recording/: mod.rs
src/recording/field/: mod.rs  range.rs  time_range.rs
src/recording/record/: device.rs  transducer.rs
src/recording/record/device/: mod.rs  output_ultrasound.rs  output_voltage.rs  sound_field.rs  sound_pressure.rs
src/recording/record/transducer/: mod.rs  output_ultrasound.rs  output_voltage.rs  sound_field.rs
src/utils/: aabb.rs  device.rs  executor.rs  mod.rs
tests/: drive.rs  mod.rs  output_ultrasound.rs  output_voltage.rs  props.rs  rms.rs  sound_field.rs  sub.rs  test.rs
tests/recording/: device.rs  mod.rs  transducer.rs
